display role dropdown